--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/index.html
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <!-- <header>
         <h1>numeri</h1>
-    </header>
+    </header> -->
 
     <div class="click-event box">
         <h4>Quelle est la Capitale d'Italie</h4>
