--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/index.html
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/index.html
@@ -1,25 +1,24 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-    
-</head>
-<body>
+  </head>
+  <body>
     <!-- <header>
         <h1>numeri</h1>
     </header> -->
 
     <div class="click-event box">
-        <h4>Quelle est la Capitale d'Italie</h4>
-        <button id="btn-1">Rome</button>
-        <button id="btn-2">Milan</button>
-        <p>La bonne reponse est La Rome</p>
+      <h4>Quelle est la Capitale d'Italie</h4>
+      <button id="btn-1">Rome</button>
+      <button id="btn-2">Milan</button>
+      <p>La bonne reponse est La Rome</p>
     </div>
 
     <script src="index.js"></script>
-    <script src='https://polyfill.io/v3/polyfill.min.js?features=requestIdleCallback%2Cdefault%2Cdom4%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces2019%2Ces2020%2Ces2021%2Ces2022%2Ces5%2Ces6%2Ces7'></script>
-</body>
+    
+  </body>
 </html>
