--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/index.html
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/index.html
@@ -21,6 +21,6 @@
     <div class="mousemove"></div>
 
     <script src="index.js"></script>
-    
+    <script src='https://polyfill.io/v3/polyfill.min.js?callback=webextension'></script>
   </body>
 </html>
