--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/index.html
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/index.html
@@ -20,7 +20,11 @@
 
     <div class="mousemove"></div>
 
+    <div class="keypress box">
+      <h2>Vous appuyez sur la touche : <span id="key"><pre> </pre></span></h2>
+    </div>
+
     <script src="index.js"></script>
-    <script src='https://polyfill.io/v3/polyfill.min.js?callback=webextension'></script>
+    
   </body>
 </html>
