--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/index.html
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/index.html
@@ -24,6 +24,31 @@
       <h2>Vous appuyez sur la touche : <span id="key"><pre> </pre></span></h2>
     </div>
 
+    <nav>
+      <ul>
+        <li>Accueil</li>
+        <li>Services</li>
+        <li>Contact</li>
+      </ul>
+    </nav>
+
+    <form action="" class="box">
+      <input type="text" name="" placeholder="Veuillez entrer Votre blaze">
+      
+      <select>
+        <option value="">Selectionner votre langage favori</option>
+        <option value="Js">Javascript</option>
+        <option value="PHP">PHP</option>
+        <option value="C++">C++</option>
+      </select>
+
+      <input type="checkbox" id="cgv">
+      <label for="cgv">Accepter les CGV</label>
+
+      <input type="button" value="Valider">
+      <div class=""></div>
+    </form>
+
     <script src="index.js"></script>
     
   </body>
