--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/index.html
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/index.html
@@ -45,7 +45,7 @@
       <input type="checkbox" id="cgv">
       <label for="cgv">Accepter les CGV</label>
 
-      <input type="button" value="Valider">
+      <input type="submit" value="Valider">
       <div class=""></div>
     </form>
 
