--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/2/TP/Cours/TP/1/CODE/CODE/INDEX.HTML
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/2/TP/Cours/TP/1/CODE/CODE/INDEX.HTML
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
+    <div class="click-event box">
+       <h4>Quelle la Capitale de la France</h4>
+       <button id="btn-1">Paris</button>
+       <button id="btn-2">Lyon</button>
+       <p>La bonne est reponse est Paris</p>
+    </div>
+
+
+
+
+    <script src="index1.js"></script>
 </body>
 </html>
