--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/2/TP/Cours/TP/1/CODE/CODE/INDEX.HTML
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/2/TP/Cours/TP/1/CODE/CODE/INDEX.HTML
@@ -12,6 +12,8 @@
        <h4>Quelle la Capitale de la France</h4>
        <button id="btn-1">Paris</button>
        <button id="btn-2">Lyon</button>
+       <button id="btn-3">Lille</button>
+       <button id="btn-4">Nantes </button>
        <p>La bonne est reponse est Paris</p>
     </div>
 
