--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/2/TP/Cours/TP/1/CODE/CODE/INDEX.HTML
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/2/TP/Cours/TP/1/CODE/CODE/INDEX.HTML
@@ -15,9 +15,10 @@
        <button id="btn-3">Lille</button>
        <button id="btn-4">Nantes </button>
        <p>La bonne est reponse est Paris</p>
+       <p class="p"></p>
     </div>
 
-
+    <div class="mousemove"></div>
 
 
     <script src="index1.js"></script>
