--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/2/TP/Cours/TP/1/CODE/CODE/INDEX.HTML
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/2/TP/Cours/TP/1/CODE/CODE/INDEX.HTML
@@ -15,11 +15,11 @@
        <button id="btn-3">Lille</button>
        <button id="btn-4">Nantes </button>
        <p>La bonne est reponse est Paris</p>
-       
+        <div class="no">
+        <p class="erreur">ERREUR</p>
     </div>
-    <div class="no">
-        <p class="p pp">ERREUR</p>
     </div>
+   
 
     <div class="mousemove"></div>
 
