--- a/Backgroung facebook/index.html
+++ b/Backgroung facebook/index.html
@@ -4,17 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        .prvi {
+    width: 100%;
+    height: 540px;
+}
+
+.drugi {
+    position: absolute;
+    left: 800px;
+    
+}
+    </style>
 </head>
 <body>
-    <div class="ph">
+    <!-- <div class="ph"> -->
 
-        <div class="prvi">
-          <img src="./aa.jpg" alt="">
-        </div>
-        <div class="drugi">
-            <!-- <img class="drugii" src="./aa.png" alt="aaa" width="300" height="500"> -->
-        </div>
+        <!-- <div class="prvi"> -->
+          <img class="prvi" src="./aa.jpg" alt="code">
+        <!-- </div> -->
+        <!-- <div class="drugi"> -->
+            <img class="drugi" src="./aa.png" alt="aaa">
+        <!-- </div> -->
 
-    </div>
+    <!-- </div> -->
 </body>
 </html>
