--- a/1 From Scratch TP EX/EX/3 FromScratch Cours/Cours-HTML/1. Cours-HTML/2. [TP1 présentation] Tableau Complexe/index.html
+++ b/1 From Scratch TP EX/EX/3 FromScratch Cours/Cours-HTML/1. Cours-HTML/2. [TP1 présentation] Tableau Complexe/index.html
@@ -5,7 +5,126 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+ <style>
+    body {
+        background: #5d78d3;
+        text-align: center;
+    }
+
+    html {
+  font-family: sans-serif;
+}
+
+table {
+  border-collapse: collapse;
+  border: 2px solid rgb(200,200,200);
+  letter-spacing: 1px;
+  font-size: 0.8rem;
+}
+
+td, th {
+  border: 1px solid rgb(190,190,190);
+  padding: 10px 20px;
+}
+
+th {
+  background-color: rgb(235,235,235);
+}
+
+td {
+  text-align: center;
+}
+
+tr:nth-child(even) td {
+  background-color: rgb(250,250,250);
+}
+
+tr:nth-child(odd) td {
+  background-color: rgb(245,245,245);
+}
+
+caption {
+  padding: 10px;
+}
+
+ /* table, caption, tbody, tfoot, thead, tr, th, td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+} */
+</style>
 <body>
-    
+    <h1>Le Tableau</h1>
+    <table border="4" cellpadding="10" cellspacing="4">
+        <thead>
+            <tr>
+                <th>Entreprise</th>
+                <th>Division</th>
+                <th>Ref</th>
+                <th>Franchise</th>
+                <th>Employés</th>
+                <th>CA</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>ADS</td>
+              <td>1052</td>
+              <td>10,7</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td>YT</td>
+              <td>BTO</td>
+              <td>204</td>
+              <td>150,1</td>
+            </tr>
+            <tr>
+              <tr></tr>
+              <td>Google</td>
+              <td></td>
+              <td>CSI</td>
+              <td>3543</td>
+              <td>60,0</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Google Ltd</td>
+              <td></td>
+              <td>ADS</td>
+              <td>48</td>
+              <td>10,7</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td>Map</td>
+              <td>BTO</td>
+              <td>5471</td>
+              <td>15,8</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Total</td>
+              <td></td>
+              <td></td>
+              <td>10318</td>
+              <td>247,3</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
+
+
