--- a/1 From Scratch TP EX/EX/3 FromScratch Cours/Cours-HTML/1. Cours-HTML/2. [TP1 présentation] Tableau Complexe/index.html
+++ b/1 From Scratch TP EX/EX/3 FromScratch Cours/Cours-HTML/1. Cours-HTML/2. [TP1 présentation] Tableau Complexe/index.html
@@ -74,9 +74,10 @@ table {
             </tr>
         </thead>
         <tbody>
+          
             <tr>
-              <td></td>
-              <td></td>
+              <td rowspan="6">Google</td>
+              <td rowspan="5">Google Ltd</td>
               <td></td>
               <td>ADS</td>
               <td>1052</td>
@@ -91,8 +92,9 @@ table {
               <td>150,1</td>
             </tr>
             <tr>
-              <tr></tr>
-              <td>Google</td>
+              <td></td>
+              <td></td>
+              <td></td>
               <td></td>
               <td>CSI</td>
               <td>3543</td>
@@ -100,7 +102,7 @@ table {
             </tr>
             <tr>
               <td></td>
-              <td>Google Ltd</td>
+              <td></td>
               <td></td>
               <td>ADS</td>
               <td>48</td>
@@ -115,12 +117,15 @@ table {
               <td>15,8</td>
             </tr>
             <tr>
+              <td colspan="3"></td>
               <td></td>
-              <td>Total</td>
               <td></td>
-              <td></td>
+              <td><tr>
+                <td colspan="4">Total</td>
+              </tr></td>
               <td>10318</td>
               <td>247,3</td>
+              
             </tr>
         </tbody>
     </table>
