--- a/1 From Scratch TP EX/EX/3 FromScratch Cours/Cours-HTML/1. Cours-HTML/4. [TP3 présentation] Intégrer une maquette professionnelle/TP/index.html
+++ b/1 From Scratch TP EX/EX/3 FromScratch Cours/Cours-HTML/1. Cours-HTML/4. [TP3 présentation] Intégrer une maquette professionnelle/TP/index.html
@@ -24,5 +24,16 @@
         </div>
         <button>CAMING CAMPUS EN VIDEO <span>&#062</span></button>
     </header>
+    <div class="imag">
+        <p>Imaginé par des profissionnels des jeux video et de l'education, Gaming Campus est un lieu pour révéler les talents et développer les compétences</p>
+    </div>
+    <section>
+        <div class="1shootimg">
+            <img src="./assets/img/logo-gbs-home.png" alt="">
+            <h3>GAMING BUSINESS SCHOOL</h3>
+            <p>formez-vous dans la première écoule de management dédiées aux enjeux et métiers de jeuxvidéo</p>
+            <button>EN SAVOIR PLUS</button>
+        </div>
+    </section>
 </body>
 </html>
