--- a/1 From Scratch TP EX/EX/3 FromScratch Cours/Cours-HTML/1. Cours-HTML/4. [TP3 présentation] Intégrer une maquette professionnelle/TP/index.html
+++ b/1 From Scratch TP EX/EX/3 FromScratch Cours/Cours-HTML/1. Cours-HTML/4. [TP3 présentation] Intégrer une maquette professionnelle/TP/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+   
+</style>
 <body>
     <nav>
         <ul>
@@ -27,13 +30,35 @@
     <div class="imag">
         <p>Imaginé par des profissionnels des jeux video et de l'education, Gaming Campus est un lieu pour révéler les talents et développer les compétences</p>
     </div>
-    <section>
+    <section class="section1">
         <div class="1shootimg">
             <img src="./assets/img/logo-gbs-home.png" alt="">
             <h3>GAMING BUSINESS SCHOOL</h3>
             <p>formez-vous dans la première écoule de management dédiées aux enjeux et métiers de jeuxvidéo</p>
             <button>EN SAVOIR PLUS</button>
         </div>
+        <div class="1shootimg">
+            <img src="./assets/img/logo-ga-home.png" alt="">
+            <h3>GAMING ACADEMY</h3>
+            <p>Entrainez-vous dans des conditions optimales pour devenir esportif professionnel</p>
+            <button>EN SAVOIR PLUS</button>
+        </div>
+        <div class="1shootimg">
+            <img src="./assets/img/logo-gg-home.png" alt="">
+            <h3>GAMING GURU</h3>
+            <p>Jouez avec les meilleurs gamers pour vous améliorer dans vos jeux vidéo préférés</p>
+            <button>EN SAVOIR PLUS</button>
+        </div>
+    </section>
+    <section class="section2">
+        <aside>
+            <div class="titre">
+                <h4>LES NEWS DU CAMPUS</h4>
+                <p>Suivez l'actualité de Gaming Campus, de G.Garu, G.B.S. et G.Academy</p>
+                <button>LA NEWSROOM <span>&#062</span></button>
+            </div>
+            
+        </aside>
     </section>
 </body>
 </html>
