--- a/1 From Scratch TP EX/EX/3 FromScratch Cours/Cours-HTML/1. Cours-HTML/4. [TP3 présentation] Intégrer une maquette professionnelle/TP/index.html
+++ b/1 From Scratch TP EX/EX/3 FromScratch Cours/Cours-HTML/1. Cours-HTML/4. [TP3 présentation] Intégrer une maquette professionnelle/TP/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <style>
-   
+   body {
+    margin: 10rem 2rem;
+    /* background-color: blue; */
+   }
 </style>
 <body>
     <nav>
@@ -23,7 +26,9 @@
     
     <header>
         <div class="logo">
-            <img src="./assets/img/logo-gc-footer.jpg" alt="">
+            <img src="./assets/img/logo-gc-hero.png" alt="">
+            <!-- <h3>GAMING CAMPUS</h3>
+            <p>PASSION. PROFESSIONNALISME. PERFORMANCE.</p> -->
         </div>
         <button>CAMING CAMPUS EN VIDEO <span>&#062</span></button>
     </header>
@@ -51,13 +56,49 @@
         </div>
     </section>
     <section class="section2">
-        <aside>
+        <aside class="aside1  ">
             <div class="titre">
                 <h4>LES NEWS DU CAMPUS</h4>
                 <p>Suivez l'actualité de Gaming Campus, de G.Garu, G.B.S. et G.Academy</p>
                 <button>LA NEWSROOM <span>&#062</span></button>
             </div>
-            
+            <div class="article">
+                <img src="./assets/img/ri8decembre.jpg" alt="">
+                <h3>Réunion d'information 19 décembre</h3>
+                <p>Venez à note rencontre lors de cette réunion d'information. Témoignages des étudiants / Ateliers sur lapédagogige par projet "Active Learning by Gaming Campus" / Découverte des locaux / Rencontre avec l'équipe pédagogique / Questions réponses.</p>
+                <a href="">SUR INSCRIPTION <span>&#062</span></a>
+            </div>
+            <div class="article">
+                <img src="./assets/img/pgw18home.jpg" alt="">
+                <h4>Paris Games Week 2018 et réunions d'information</h4>
+                <p>Pendant tout le mois d'octobre venez rencontrer l'équipe pédagogique du Gaming Campus: CampusLyon et stand GamingCapus a la PGW18</p>
+                <a href="">LIRE LA SUITE <span>&#062</span></a>
+            </div>
+            <div class="article">
+                <img src="./assets/img/inauguration_gaming_campus_photo.jpg" alt="">
+                <h4>Inauguration Gaming Caming Lyon</h4>
+                <p>Revivez l'inaugrution du Gaming Campus Lyon avec 180 invités , les grands annonces de la rentée, les photos de la soirée et les premières dates de réunions d'information</p>
+                <a href="">LIRE LA SUITE <span>&#062</span></a>
+            </div>
+        </aside>
+    </section>
+    <section class="section3">
+        <aside class="aside2">
+            <div class="photo">
+                <img src="./assets/img/logo-gc-hero.png" alt="">
+            </div>
+            <div class="liens">
+                <h4>INFOS PRATIQUES</h4>
+                <ul>
+                    <li>Gaming Business School</li>
+                    <li>Gaming Academy</li>
+                    <li>Gaming Guru</li>
+                    <li>Recrument</li>
+                    <li>Investisseurs</li>
+                    <li>Mentions légales</li>
+                    <li>C.G.U</li>
+                </ul>
+            </div>
         </aside>
     </section>
 </body>
