--- a/1 From Scratch TP EX/EX/3 FromScratch Cours/1. HTML/1. HTML/1. HTML/Cours CSS 2-2/Nouveau document texte.html
+++ b/1 From Scratch TP EX/EX/3 FromScratch Cours/1. HTML/1. HTML/1. HTML/Cours CSS 2-2/Nouveau document texte.html
@@ -33,6 +33,7 @@
         </div>
 
         <button>Valider</button>
+        <a href="http://www.google.com" target="_blank">Conditions générales de vente</a>
     </div>
 </body>
 </html>
