--- a/1 From Scratch TP EX/EX/3 FromScratch Cours/1. HTML/1. HTML/1. HTML/Cours CSS 2-2/Nouveau document texte.html
+++ b/1 From Scratch TP EX/EX/3 FromScratch Cours/1. HTML/1. HTML/1. HTML/Cours CSS 2-2/Nouveau document texte.html
@@ -37,5 +37,7 @@
         <button>Valider</button>
         <a href="http://www.google.com" target="_blank">Conditions générales de vente</a>
     </div>
+
+    <img src="./spaceship.png" alt="spaces">
 </body>
 </html>
