--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/3. [TP1 présentation] Intégration Helium (Flexbox)/index.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/3. [TP1 présentation] Intégration Helium (Flexbox)/index.html
@@ -2,58 +2,59 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>helium-maquette</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Helium Flexbox</title>
+
 </head>
 
 <body>
-    <header>
-        <h1>helium</h1>
-        <nav>
-            <ul class="ul">
-                <li>5G</li>
-                <li>explorer</li>
-                <li>ecosystem</li>
-            </ul>
-        </nav>
-    </header>
-    <article>
-        <h2>people-powered networks</h2>
-        <h3>start a wireless revolution</h3>
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil ipsa
-            non, sapiente facere sit quas saepe nobis perferendis obcaecati nostrum.
-            Ducimus id culpa sed tenetur maxime assumenda provident laboriosam
-            aliquam.
-        </p>
-       
-    </article> 
-    <div class="img">
-        <img src="./corrigé/img/main.png" alt="aaa" />
+  <nav>
+    <h2>Helium</h2>
+    <ul>
+      <li>5G</li>
+      <li>Explorer</li>
+      <li>Ecosystem</li>
+    </ul>
+  </nav>
+
+  <section class="header">
+    <div class="header-left">
+      <div class="header-left-container">
+        <h1>People-Powered Networks</h1>
+        <h3>Start a Wireless Revolution</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora aliquid pariatur quae placeat veniam ratione
+          repellendus obcaecati atque quibusdam non!</p>
+      </div>
     </div>
-    <footer>
-        <aside class="aside">
-            <ul>
-                <li>core technologies</li>
-                <li>our investores</li>
-            </ul>
-            <ul>
-                <li>tokens</li>
-                <li>proof of coverage</li>
-                <li>LongFI</li>
-            </ul>
-            <ul>
-                <li><img src="./corrigé/img/investlogo2blue.png" alt="" /></li>
-                <li><img src="./corrigé/img/investlogo3blue.png" alt="" /></li>
-                <li><img src="./corrigé/img/investlogo4blue.png" alt="" /></li>
-            </ul>
-        </aside>
-    </footer>
+    <div class="header-right">
+      <img src="./img/main.png" id="modem" alt="modem">
+    </div>
+  </section>
+
+  <section class="infos">
+    <div class="infos-left">
+      <h3>Core Technologies</h3>
+      <div class="btn-container">
+        <button>Tokens</button>
+        <button>Proof of Coverage</button>
+        <button>LongFi</button>
+      </div>
+    </div>
+    <div class="infos-right">
+      <h3>Our Investors</h3>
+      <div class="investors">
+        <div class="img-container">
+          <img src="./img/investlogo2blue.png" alt="investor-1">
+          <img src="./img/investlogo3blue.png" alt="investor-2">
+          <img src="./img/investlogo4blue.png" alt="investor-3">
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 </body>
 
 </html>
