--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/3. [TP1 présentation] Intégration Helium (Flexbox)/index.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/3. [TP1 présentation] Intégration Helium (Flexbox)/index.html
@@ -47,10 +47,10 @@
                 <li class="lii">proof of coverage</li>
                 <li class="lii">LongFI</li>
             </ul>
-            <ul>
-                <li><img src="./corrigé/img/investlogo2blue.png" alt="" /></li>
-                <li><img src="./corrigé/img/investlogo3blue.png" alt="" /></li>
-                <li><img src="./corrigé/img/investlogo4blue.png" alt="" /></li>
+            <ul class="drugi">
+                <li><img src="./corrigé/img/investlogo2blue.png" width="100" height="50" alt="" /></li>
+                <li><img src="./corrigé/img/investlogo3blue.png" width="100" height="50" alt="" /></li>
+                <li><img src="./corrigé/img/investlogo4blue.png" width="100" height="50" alt="" /></li>
             </ul>
         </aside>
     </footer>
