--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/3. [TP1 présentation] Intégration Helium (Flexbox)/index.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/3. [TP1 présentation] Intégration Helium (Flexbox)/index.html
@@ -1,59 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>helium-maquette</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>helium</h1>
-        <nav>
-            <ul class="ul">
-                <li>5G</li>
-                <li>explorer</li>
-                <li>ecosystem</li>
-            </ul>
-        </nav>
+      <h1>helium</h1>
+      <nav>
+        <ul class="ul">
+          <li>5G</li>
+          <li>explorer</li>
+          <li>ecosystem</li>
+        </ul>
+      </nav>
     </header>
     <article>
-        <h2>people-powered networks</h2>
-        <h3>start a wireless revolution</h3>
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil ipsa
-            non, sapiente facere sit quas saepe nobis perferendis obcaecati nostrum.
-            Ducimus id culpa sed tenetur maxime assumenda provident laboriosam
-            aliquam.
-        </p>
-       
-    </article> 
+      <h2>people-powered networks</h2>
+      <h3>start a wireless revolution</h3>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil ipsa
+        non, sapiente facere sit quas saepe nobis perferendis obcaecati nostrum.
+        Ducimus id culpa sed tenetur maxime assumenda provident laboriosam
+        aliquam.
+      </p>
+    </article>
     <div class="img">
-        <img src="./corrigé/img/main.png" alt="aaa" />
+      <img src="./corrigé/img/main.png" alt="aaa" />
     </div>
     <footer>
-        <aside class="aside">
-            <ul class="li">
-                <li>core technologies</li>
-                <li>our investores</li>
-            </ul>
-            <ul class="ull">
-                <li class="lii">tokens</li>
-                <li class="lii">proof of coverage</li>
-                <li class="lii">LongFI</li>
-            </ul>
-            <ul class="drugi">
-                <li><img src="./corrigé/img/investlogo2blue.png" width="100" height="50" alt="" /></li>
-                <li><img src="./corrigé/img/investlogo3blue.png" width="100" height="50" alt="" /></li>
-                <li><img src="./corrigé/img/investlogo4blue.png" width="100" height="50" alt="" /></li>
-            </ul>
-        </aside>
+      <aside class="aside">
+        <ul class="li">
+          <li>core technologies</li>
+          <li>our investores</li>
+        </ul>
+        <ul class="ull">
+          <li class="lii">tokens</li>
+          <li class="lii">proof of coverage</li>
+          <li class="lii">LongFI</li>
+        </ul>
+        <ul class="drugi">
+          <li>
+            <img
+              src="./corrigé/img/investlogo2blue.png"
+              width="100"
+              height="50"
+              alt=""
+            />
+          </li>
+          <li>
+            <img
+              src="./corrigé/img/investlogo3blue.png"
+              width="100"
+              height="50"
+              alt=""
+            />
+          </li>
+          <li>
+            <img
+              src="./corrigé/img/investlogo4blue.png"
+              width="100"
+              height="50"
+              alt=""
+            />
+          </li>
+        </ul>
+      </aside>
     </footer>
-</body>
-
+  </body>
 </html>
