--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/6. [TP3 présentation] Être responsive +  explication + corrigé/indexTP.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/6. [TP3 présentation] Être responsive +  explication + corrigé/indexTP.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Helium Flexbox</title>
 
-    <link rel="stylesheet" href="style1.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
