--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/7. [TP4 présentation] Grid Complexe/index.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/7. [TP4 présentation] Grid Complexe/index.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-  <div>1</div>
-  <div>2</div>
-  <div>3</div>
-  <div>4</div>
-  <div>5</div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
 </body>
 </html>
