--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/index.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/index.html
@@ -69,7 +69,7 @@
     </div>
   </section>
 
-  <section class="news-part">
+  <section class="news-part">4
     <div class="header-news">
       <div class="left-part">
         <h2>les news du campus</h2>
