--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/index.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/index.html
@@ -15,7 +15,7 @@
 <body>
   <nav>
     <ul>
-      <li>Accueil</li>
+      <li class="li"><span>Accueil</span></li>
       <li>business school</li>
       <li>ecole esport</li>
       <li>cours de jeux vidéo</li>
