--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/index.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/index.html
@@ -15,7 +15,7 @@
 <body>
   <nav>
     <ul>
-      <li class="li"><span>Accueil</span></li>
+      <li>Accueil</li>
       <li>business school</li>
       <li>ecole esport</li>
       <li>cours de jeux vidéo</li>
@@ -35,7 +35,6 @@
     </div>
   </header>
 
-  <div class="header-text">
     <p>Imaginé par des professionnels des jeux vidéo et de l'éducation, Gaming Campus est un lieu unique pour révéler
       les talents et développer les compétences.</p>
   </div>
@@ -44,7 +43,7 @@
     <div class="icon-part-container">
       <div class="list-icon-part">
         <div class="lip-logo">
-          <img src="./assets/img/logo-gbs-home.png" alt="logo GBS">
+          <img src=".assets/img/logo-gbs-home.png" alt="logo GBS">
         </div>
         <h3>gaming business school</h3>
         <p>formez-vous dans la première école de management dédiée aux enjeux et métiers du jeuvidéo.</p>
@@ -218,4 +217,4 @@
 
 </html>
 
-
+ 
