--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/index.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/index.html
@@ -28,7 +28,7 @@
   <header>
     <div class="main-header">
       <div id="logo">
-        <img src="./assets/img/logo-gc-hero.png" alt="logo">
+        <img src="./assets/img/bg.jpg" alt="logo">
       </div>
       <h1>passion. professionnalisme. performance.</h1>
       <button>gaming campus en video <i class="fas fa-angle-right"></i></button>
@@ -43,7 +43,7 @@
     <div class="icon-part-container">
       <div class="list-icon-part">
         <div class="lip-logo">
-          <img src=".assets/img/logo-gbs-home.png" alt="logo GBS">
+          <img src="./assets/img/logo-gbs-home.png" alt="logo GBS">
         </div>
         <h3>gaming business school</h3>
         <p>formez-vous dans la première école de management dédiée aux enjeux et métiers du jeuvidéo.</p>
