--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/index.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/index.html
@@ -8,6 +8,9 @@
 
   <title>TP5 - Gaming Campus</title>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   <link href="./style.css" rel="stylesheet">
 </head>
@@ -28,7 +31,7 @@
   <header>
     <div class="main-header">
       <div id="logo">
-        <img src="./assets/img/bg.jpg" alt="logo">
+        <img src="./assets/img/logo-gc-hero.png" alt="logo">
       </div>
       <h1>passion. professionnalisme. performance.</h1>
       <button>gaming campus en video <i class="fas fa-angle-right"></i></button>
