--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/index.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Run</h1>
+        <p class="prvi">Lorem ipsum dolor sit amet consectetur adipisicing elit, 
+            Explicabo voluptatum iusto corporis aut nesciunt assumenda facere cumque, 
+            mollitia, asperiores maiores!</p>
+       <button class="1vi">GET STARTED</button>  
+    </header>  img src="./integration-run-master/img/banner.jpg" width="1000" alt="run">
 </body>
 </html>
