--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/index.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/index.html
@@ -7,11 +7,30 @@
 </head>
 <body>
     <header>
-        <h1>Run</h1>
-        <p class="prvi">Lorem ipsum dolor sit amet consectetur adipisicing elit, 
-            Explicabo voluptatum iusto corporis aut nesciunt assumenda facere cumque, 
-            mollitia, asperiores maiores!</p>
-       <button class="1vi">GET STARTED</button>  
-    </header>  img src="./integration-run-master/img/banner.jpg" width="1000" alt="run">
+        <div class="prvi">
+            <h1>Run</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, 
+                Explicabo voluptatum iusto corporis aut nesciunt assumenda facere cumque, 
+                mollitia, asperiores maiores!</p>
+            <button>GET STARTED</button>
+        </div> 
+        <div class="1-vi">
+            <img src="./integration-run-master/img/banner.jpg" width="1000" alt="run">
+        </div>
+    </header>
+    <aside>
+        <div class="drugi">
+            <img src="./integration-run-master/img/img-left.jpg" width="1000" alt="">
+        </div>
+        <div class="2-gi">
+            <h2>magna etiam feugiat</h2>
+            <p>Lorem ipsum dolor sit arnet, consectetur adipiscing elit. 
+                Morbi id ante sed ex Pharetra lacinia sit amet vel massa. 
+                Donec facilisis laoreet nulla eu bibendum. Stoga ut ex risus. 
+                Fusce lorem lectus, clairetra pretium massa el, hendrerit 
+                vestibulurn odio lorem ipsum dolor sit amet</p>
+            <button>GET STARTED</button>
+        </div>
+    </aside>  
 </body>
 </html>
