--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/index.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/index.html
@@ -31,6 +31,37 @@
                 vestibulurn odio lorem ipsum dolor sit amet</p>
             <button>GET STARTED</button>
         </div>
-    </aside>  
+    </aside> 
+    <aside>
+        <div class="3-i">
+            <h2>tepmus adipiscing</h2>
+            <p>Lorem ipsum dolor sit arnet, consectetur adipiscing elit. 
+                Morbi id ante sed ex Pharetra lacinia sit amet vel massa. 
+                Donec facilisis laoreet nulla eu bibendum. Stoga ut ex risus. 
+                Fusce lorem lectus, clairetra pretium massa el, hendrerit 
+                vestibulurn odio lorem ipsum dolor sit amet</p>
+                <div class="treci">
+                    <img src="./integration-run-master/img/img-left.jpg" width="1000" alt="">
+                </div>
+            <button>GET STARTED</button>
+        </div>
+    </aside>
+    <div class="form">
+        <h3>get in touch</h3>
+        <form action="">
+            <p>Name</p><input type="text" placeholder="">
+                <p>Email</p><input type="email" placeholder="">
+                <p>Message</p><textarea name="" id="" cols="30" rows="10" placeholder=""></textarea>
+        <button>SEND MESSAGE</button>      
+    </div>
+    <footer>
+        <div class="icon">
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-email"></i>
+        </div>
+    </footer>
 </body>
 </html>
