--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/index.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
                 mollitia, asperiores maiores!</p>
             <button>GET STARTED</button>
         </div> 
-        <div class="1-vi">
+        <div class="pr-vi">
             <img src="./integration-run-master/img/banner.jpg" width="1000" alt="run">
         </div>
     </header>
