--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/index.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -16,15 +19,15 @@
             <button>GET STARTED</button>
         </div> 
         <div class="pr-vi">
-            <img src="./integration-run-master/img/banner.jpg" width="1000" alt="run">
+            <img src="./integration-run-master/img/banner.jpg" alt="run">
         </div>
     </header>
     <aside>
         <div class="drugi">
             <img src="./integration-run-master/img/img-left.jpg" width="1000" alt="">
         </div>
-        <div class="2-gi">
-            <h2>magna etiam feugiat</h2>
+        <div class="dru-gi">
+            <h2>Magna etiam feugiat</h2>
             <p>Lorem ipsum dolor sit arnet, consectetur adipiscing elit. 
                 Morbi id ante sed ex Pharetra lacinia sit amet vel massa. 
                 Donec facilisis laoreet nulla eu bibendum. Stoga ut ex risus. 
@@ -33,8 +36,8 @@
             <button>GET STARTED</button>
         </div>
     </aside> 
-    <aside>
-        <div class="3-i">
+    <aside class="aside">
+        <div class="tre-ci">
             <h2>tepmus adipiscing</h2>
             <p>Lorem ipsum dolor sit arnet, consectetur adipiscing elit. 
                 Morbi id ante sed ex Pharetra lacinia sit amet vel massa. 
