--- a/1 From Scratch TP EX/EX/4. Javascript/index.html
+++ b/1 From Scratch TP EX/EX/4. Javascript/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./variables.js"></script>
+    <style>
+        body {
+          background: rgb(91, 102, 107);
+        }
+      </style>
 </head>
 <body>
     
