--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/index.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/index.html
@@ -75,11 +75,11 @@
         </div>
     <footer>
             <div class="icon">
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-linkedin-in"></i>
-                <i class="fab fa-email"></i>
+                <i class="fab fa-twitter"><img src="./integration-run-master/img-small/icons8-x-50.png" alt=""></i>
+                <i class="fab fa-facebook-f"><img src="./integration-run-master/img-small/icons8-facebook-f-5.png" alt=""></i>
+                <i class="fab fa-instagram"><img src="./integration-run-master/img-small/icons8-instagram-50.png" alt=""></i>
+                <i class="fab fa-linkedin-in"><img src="./integration-run-master/img-small/icons8-linkedin-50.png" alt=""></i>
+                <i class="fab fa-email"><img src="./integration-run-master/img-small/icons8-email-50.png" alt=""></i>
             </div>
         
     </footer>
