--- a/1 From Scratch TP EX/EX/4. Javascript/index.html
+++ b/1 From Scratch TP EX/EX/4. Javascript/index.html
@@ -4,14 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./variables.js"></script>
+    <script src="./conditions"></script>
     <style>
         body {
-          background: rgb(91, 102, 107);
+          background: rgb(0, 0, 0);
+        }
+        h1 {
+          text-align: center;
+          color: aliceblue;
+          letter-spacing: 1px;
+          font-size: 40px;
+        }
+        li {
+          text-decoration: underline;
+          color: aliceblue;
+          font-size: 25px;
+          text-transform: capitalize;
+          padding: 7 px 0;
         }
       </style>
 </head>
 <body>
-    
+    <h1>Javascript</h1>
+    <ul>
+      <li>variables.js</li>
+      <li>conditions.js</li>
+    </ul>
+    <script>
+
+      const pers = 20
+
+      alert('Bonjour')
+      const age = prompt('Quelle est Votre age')
+
+      if (18 <= age) {
+        console.log('saw 3');
+
+      } else('non')
+
+    </script>
 </body>
 </html>
