--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/index.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/index.html
@@ -20,8 +20,9 @@
         </div> 
         <div class="pr-vi">
             <img src="./integration-run-master/img/banner.jpg" alt="run">
+            <div class="ar"></div>
         </div>
-        <div class="ar">
+        
 
         </div>
     </header>
