--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/indexT.html
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/10. [Projet 2 présentation] Intégration Run/indexT.html
@@ -80,27 +80,29 @@
         <ul>
             <li>
                 <a href="#">
-                    <i class="fa-brands fa-x-twitter" style="color: #000000;"></i>
+                    <i class="fa-solid fa-x"></i>
+                    <!-- <i class="fa-brands fa-square-x-twitter"></i> -->
+                    <!-- <i class="fa-brands fa-x-twitter" style="color: #000000;"></i> -->
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class="fa-brands fa-facebook-f" style="color: #000000;"></i>
+                    <i class="fa-brands fa-facebook-f"></i>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class="fa-brands fa-instagram" style="color: #000000;"></i>
+                    <i class="fa-brands fa-instagram" ></i>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class="fa-brands fa-linkedin-in" style="color: #000000;"></i>
+                    <i class="fa-brands fa-linkedin-in" ></i>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class="fa-regular fa-envelope" style="color: #000000;"></i>
+                    <i class="fa-regular fa-envelope"></i>
                 </a>
             </li>
         </ul>
